# inworld-tts-onprem

./: .gitignore  README.md  REF-BENCHMARK.MD  REF-BENCHMARK.md  license.txt  onprem.env.example  run.sh
helm/: .helmignore  Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-voices-endpoint.yaml
helm/tests/: deployment_test.yaml
load_test/: README.md  pyproject.toml
load_test/load_test/: benchmark_compare.py  data_types.py  embedding_clients.py  main.py  results_plot.py  results_printer.py  sample_runner.py  text_samples_single.json  timer.py
tts-load-test-simple/: README.md  pyproject.toml
tts-load-test-simple/tts_load_test/: clients.py  content.py  tts_clients.py
